[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.74"
bundlr-sdk = "0.5.0"
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
sha2 = "0.10.8"
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "r2d2"] }
base64-url = "2.0.0"