[package]
name = "su"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.74"
bundlr-sdk = "0.5.0"
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
arweave-rs = "0.2.0"
base64 = "0.13.0"
crypto = "0.5.1"
byteorder = "1.5.0"
sha2 = "0.10.8"
bytes = "1.5.0"
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4.31"
base64-url = "2.0.0"
jsonwebkey = "0.3.5"
hex = "0.4.3"
avro-rs = "0.13.0"
lazy_static = "1.4.0"