[package]
name = "su"
version = "0.1.0"
edition = "2021"
default-run = "su"

[dependencies]
actix = "0.13.5"
actix-web = "4"
async-trait = "0.1.74"
bundlr-sdk = "0.5.0"
reqwest = "0.11.22"
serde = "1.0.188"
serde_json = "1.0.107"
serde_derive = "1.0.188"
arweave-rs = "0.2.0"
sha2 = "0.10.8"
bytes = "1.5.0"
diesel = { version = "2.1.3", features = ["postgres", "serde_json", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
base64-url = "2.0.0"
jsonwebkey = "0.3.5"
hex = "0.4.3"
ring = "0.16.20"
tokio = "1.34.0"
env_logger = "0.10.1"
log = "0.4.20"
rsa = "0.6.1"
dashmap = "5.5.3"
base64 = "0.21.5"
actix-cors = "0.6.0"
simd-json = "0.13.10"
futures = "0.3.30"
rocksdb = "0.22.0"

[[bin]]
name = "su"
path = "src/main.rs"
