[package]
name = "ao-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arweave-rs = { git = "https://github.com/Irys-xyz/arweave-rs" }
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["json", "multipart"] }
serde = "1.0.197"
serde_json = "1.0.115"
