[package]
name = "ao-scheduler-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
ao-common = { path = "../ao-common" }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
lru = "0.12.3"
url = "2.5.0"
mockito = "1.4.0"
