[package]
name = "client-lib"
version = "0.1.0"
authors = ["David Choi <dharric@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasmedge-bindgen = "0.4.1"
wasmedge-bindgen-macro = "0.4.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
