[package]
name = "wasmedge-sdk-bindgen"
version = "0.4.0"
edition = "2021"
description = "Pass string, vec and primitive types from host to webassembly, with WasmEdge Rust SDK"
license = "MIT/Apache-2.0"
repository = "https://github.com/second-state/wasmedge-bindgen-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4.2"
wasmedge-sdk = "0.13.2"
wasmedge-types = "0.4.4"
