[package]
name = "aorust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version="1.0", default-features = false, features = ["alloc"] }
wee_alloc = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"