[package]
name = "warp-contracts"
version = "0.1.3"
edition = "2021"
description = "Warp WASM contract utils for rust contracts"
license = "MIT"
documentation = "https://docs.warp.cc/docs/sdk/advanced/wasm"
homepage = "https://warp.cc"
repository = "https://github.com/warp-contracts/warp"
keywords = ["warp", "smart-contract", "SmartWeave", "web3"]
categories = ["api-bindings", "development-tools::ffi", "finance", "wasm"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
warp-contracts-macro = { version = "=0.1.3", path = "warp-contracts-macro" }
warp-contracts-core = { version = "=0.1.3", path = "warp-contracts-core" }

[features]
debug = ["warp-contracts-core/debug"]

[workspace]
members = ["warp-contracts-macro", "warp-contracts-core"]

[workspace.dependencies]
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = { version = "=0.4.34" }
js-sys = "=0.3.61"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.5.0"
web-sys = { version = "=0.3.61" }
