[package]
name = "warp-contracts-core"
version = "0.1.3"
edition = "2021"
description = "warp-contracts helper crate"
license = "MIT"
documentation = "https://docs.warp.cc/docs/sdk/advanced/wasm"
homepage = "https://warp.cc"
repository = "https://github.com/warp-contracts/warp"
keywords = ["warp", "smart-contract", "SmartWeave", "web3"]
categories = ["api-bindings", "development-tools::ffi", "finance", "wasm"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-sys = { workspace = true, optional = true }

[features]
debug = ["web-sys/console"]
