[package]
name = "warp-contracts-macro"
version = "0.1.3"
edition = "2021"
description = "warp_contract macro definition"
license = "MIT"
documentation = "https://docs.warp.cc/docs/sdk/advanced/wasm"
homepage = "https://warp.cc"
repository = "https://github.com/warp-contracts/warp"
keywords = ["warp", "smart-contract", "SmartWeave", "web3"]
categories = ["api-bindings", "development-tools::ffi", "finance", "wasm"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
warp-contracts-core = { version = "=0.1.3", path = "../warp-contracts-core" }
