[package]
name = "warp_pst_implementation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
warp_pst = { path = "../definition" }
warp-contracts = { version = "0.1.2", features = ["debug"], path = "../../../warp-contracts" }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "=0.4.34"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.5.0"
async-recursion = "1.0.0"
async-trait = "0.1.56"
tokio-test = "0.4.2"
